// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mandataire should GET service 1`] = `
Object {
  "adresse": "21 rue de houx",
  "code_postal": "62000",
  "dispo_max": 3,
  "email": null,
  "etablissement": "UDAHF Siege",
  "id": 1,
  "nom": null,
  "prenom": null,
  "telephone": "0237100000",
  "type": "service",
  "userId": 3,
  "ville": "Arras",
}
`;

exports[`TI should GET list of mandataires 1`] = `
Array [
  Object {
    "adresse": "21 rue de houx",
    "code_postal": "62000",
    "contact_email": null,
    "contact_nom": null,
    "contact_prenom": null,
    "date_mesure_update": null,
    "dispo_max": 5,
    "email": "ud@ud.com",
    "email_send": null,
    "etablissement": "UDAHF",
    "genre": null,
    "id": 1,
    "latitude": 50.5333,
    "longitude": 2.6333,
    "mesures_en_attente": null,
    "mesures_en_cours": 2,
    "nb_secretariat": 2,
    "nom": null,
    "prenom": "Adrien",
    "secretariat": false,
    "service_id": null,
    "telephone": "0237100000",
    "telephone_portable": "0101010101",
    "type": "individuel",
    "user_id": 1,
    "ville": "Arras",
    "zip": null,
  },
  Object {
    "adresse": "21 rue monge",
    "code_postal": "62000",
    "contact_email": null,
    "contact_nom": null,
    "contact_prenom": null,
    "date_mesure_update": null,
    "dispo_max": 3,
    "email": "panam@paris.com",
    "email_send": null,
    "etablissement": "test42",
    "genre": null,
    "id": 2,
    "latitude": 50.5333,
    "longitude": 2.6333,
    "mesures_en_attente": null,
    "mesures_en_cours": 2,
    "nb_secretariat": 2,
    "nom": null,
    "prenom": "Julien",
    "secretariat": true,
    "service_id": null,
    "telephone": "0237100000",
    "telephone_portable": "0101010101",
    "type": "prepose",
    "user_id": 2,
    "ville": "Paris",
    "zip": null,
  },
]
`;

exports[`TI should NOT GET mandataire profile 1`] = `
Object {
  "message": "Please log in",
  "name": "UnauthorizedError",
  "stack": Any<String>,
  "status": 401,
}
`;

exports[`User should GET all mandataires 1`] = `
Object {
  "adresse": "67 rue saint louis",
  "code_postal": "13000",
  "contact_email": null,
  "contact_nom": null,
  "contact_prenom": null,
  "created_at": Any<String>,
  "date_mesure_update": null,
  "dispo_max": 55,
  "email": null,
  "email_send": null,
  "etablissement": "service-1",
  "genre": null,
  "id": 5,
  "latitude": 0,
  "longitude": 0,
  "mesures_en_attente": null,
  "mesures_en_cours": 12,
  "nb_secretariat": 1,
  "nom": null,
  "prenom": null,
  "secretariat": true,
  "service_id": 1,
  "telephone": "0237100000",
  "telephone_portable": "0101010101",
  "type": "service",
  "user_id": 3,
  "ville": "Marseille",
  "zip": null
}
`;

exports[`should GET mandataire profile 1`] = `
Object {
  "adresse": "21 rue de houx",
  "code_postal": "62000",
  "contact_email": null,
  "contact_nom": null,
  "contact_prenom": null,
  "date_mesure_update": null,
  "dispo_max": 5,
  "email": "ud@ud.com",
  "email_send": null,
  "etablissement": "UDAHF",
  "genre": null,
  "id": 1,
  "latitude": 50.5333,
  "longitude": 2.6333,
  "mesures_en_attente": null,
  "mesures_en_cours": 2,
  "nb_secretariat": 2,
  "nom": null,
  "prenom": "Adrien",
  "secretariat": false,
  "service_id": null,
  "telephone": "0237100000",
  "telephone_portable": "0101010101",
  "type": "individuel",
  "user_id": 1,
  "ville": "Arras",
  "zip": null,
}
`;
